--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SimpleBottomNavigation</string>
+    <string name="home">Home</string>
+    <string name="menu">Menu</string>
+    <string name="favorite">Favorite</string>
 </resources>
