Add menu fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="menu">Menu</string>
     <string name="favorite">Favorite</string>
     <string name="home_fragment">Home Fragment</string>
+    <string name="menu_fragment">Menu Fragment</string>
 </resources>
